--- a/cold-geteway/src/main/resources/application.yml
+++ b/cold-geteway/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: cold-gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true   # 开启路由
+      routes: # 路由规则
+        - id: cold-user-router
+          uri: lb://cold-user
+          predicates:
+            - Path=/cold/sys/user/**
 eureka:
   client:
     service-url:
