--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>cold-eureka</module>
         <module>cold-user</module>
         <module>cold-geteway</module>
+        <module>cold-admin</module>
     </modules>
 
     <properties>
